--- a/public/fonts.css
+++ b/public/fonts.css
@@ -13,6 +13,12 @@
 }
 
 @font-face {
+  font-family: "JasonHandwriting";
+  src: url("JasonHandwriting5p.woff2");
+  font-display: swap;
+}
+
+@font-face {
   font-family: "Assistant";
   src: url("Assistant-Regular.woff2");
   font-display: swap;
